@@ -1,3 +1,10 @@
+2014-05-15  Corinna Vinschen  <corinna@vinschen.de>
+
+	* external.cc (cygwin_internal): Implement CW_CYGNAME_FROM_WINNAME.
+	Add lengthy comment to explain what we do and why.
+	* include/sys/cygwin.h (cygwin_getinfo_types): Add
+	CW_CYGNAME_FROM_WINNAME.
+
 2014-05-14  Corinna Vinschen  <corinna@vinschen.de>
 
 	* sec_auth.cc (get_server_groups): Call get_logon_server only for
